README.md update

--- a/App.config
+++ b/App.config
@@ -2,6 +2,6 @@
 <configuration>
 	<appSettings>
 		<!--Chromium download part for windows users(configurable)-->
-		<add key="Path" value="D:\\chromium"/>
+		<add key="Path" value="C:\\chromium"/>
 	</appSettings>
 </configuration>
